--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+<resources>
+<color name="colorPrimary">#3B6A85</color>
+<color name="colorPrimaryDark">#185070</color>
+<color name="colorAccent">#FF8E0E</color>
+</resources>
+<!--
 <resources>
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
 </resources>
+-->
